<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">BloQuery</string>
    <string name="hello_world">Hello world!</string>

    <string name="action_settings">Settings</string>
    <string name="action_logout">Log Out</string>
    <string name="action_new_question">New Question</string>
    <string name="action_new_answer">New Answer</string>

    <string name="parse_app_id">qIqsacJ1lHoDCyB7Lf33Q6ZsMfWNXATlQKUpAZGD</string>
    <string name="parse_client_key">GnHB46vFwMO4EXpib4WvTNaFocgQTUuOkBgKPPAj</string>

    <string name="text_login">Login to BloQuery</string>
    <string name="text_register_prompt">New to BloQuery?</string>
    <string name="text_register">Register BloQuery Account</string>
    <string name="text_login_failed">Oh Noes! Email or Password Incorrect</string>

    <string name="hint_email">email</string>
    <string name="hint_password">password</string>
    <string name="hint_first_name">first name</string>
    <string name="hint_last_name">last name</string>
    <string name="hint_question">question</string>
    <string name="hint_answer">answer</string>

    <string name="btn_login">Login</string>
    <string name="btn_register">Register</string>
    <string name="btn_cancel">Cancel</string>
    <string name="btn_submit">Submit</string>
    <string name="btn_save">Save</string>

    <string name="title_new_question">Ask New Question</string>
    <string name="title_new_answer">New Answer</string>

    <string name="menu_profile_pic">Update Profile Picture</string>
    <string name="menu_description">Edit Description</string>

</resources>
