<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_vertical"
    android:visibility="visible">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/text_login"
        android:gravity="center_horizontal"
        android:textSize="40sp"
        android:layout_marginBottom="30dp"
        android:textIsSelectable="false"
        />

    <TextView
        android:id="@+id/txt_failed"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/text_login_failed"
        android:visibility="invisible"
        android:layout_margin="15dp"
        android:gravity="center_horizontal"
        android:textColor="#990000"
        />

    <EditText
        android:id="@+id/et_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/hint_email"
        android:inputType="textEmailAddress"
        android:padding="3dp"
        android:layout_margin="15dp"
        />

    <EditText
        android:id="@+id/et_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/hint_password"
        android:inputType="textPassword"
        android:padding="3dp"
        android:layout_margin="15dp"
        />

    <Button
        android:id="@+id/btn_login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btn_login"
        android:layout_margin="15dp"
        />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/text_register_prompt"
        android:gravity="center_horizontal"
        />

    <Button
        android:id="@+id/btn_register"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btn_register"
        android:layout_margin="15dp"
        />





</LinearLayout>